feat: Admin frontend of custom signature template
